syntax = "proto3";

package transactor;

enum OpCode {
     UNKNOWN = 0;
     TRANSACTION = 1;
     QUERY = 2;
     TRANSACTION_RESULT = 3;

     ERROR = 100;
}

message RawMessage {
  OpCode op = 1;
  bytes payload = 2;
  bytes signature = 3;
}

message Object {
  bytes data = 1;
  bytes key = 2;
  bytes signature = 3;
}

message Transaction {
  repeated Trace traces = 1;
}

message Trace {
  Object contract = 1;
  string procedure = 2;
  repeated Object inputObjects = 3;
  repeated Object inputReference = 4;
  repeated Object outputObjects = 5;
  repeated bytes localParameters = 6;
  repeated bytes localReturns = 7;
  repeated Trace dep = 8;
}

message TransactionResult {
  repeated Object objects = 1;
}

message Query {
  Object object = 1;
}
